<resources>
    <string name="app_name">ClassroomApp</string>

    <!--Sign Up & Sign in Activity-->
    <string name="sign_up">Sign Up</string>
    <string name="enter_user">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_name">Enter your name</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="register_account">Register Account</string>
    <string name="sign_in">Sign In</string>


    <!-- Teacher & Student Activity -->
    <string name="search_subject">Search subject name....</string>

    <string name="subject_names">Subject Names</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Navigation Bar -->
    <string name="username">Username:</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="name">Name:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="changepw">Change Password</string>
    <string name="deleteaccount">Delete Account</string>
    <string name="logout">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!-- Dialog CourseFragment -->
    <string name="exam_tests"><![CDATA[EXAMS & TESTS]]></string>
    <string name="videos">VIDEOS</string>
    <string name="document_files">DOCUMENT FILES</string>
    <string name="remove_this_subject">REMOVE THIS SUBJECT</string>


</resources>
