<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_coures1"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item android:id="@+id/nav_changepw1"
            android:icon="@drawable/ic_changepw"
            android:title="@string/changepw"/>
        <item android:id="@+id/nav_deleteaccount1"
            android:icon="@drawable/ic_delete"
            android:title="@string/deleteaccount"/>
        <item android:id="@+id/nav_logout1"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

</menu>