<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_coures"
            android:icon="@drawable/ic_courses"
            android:title="@string/course"/>
        <item android:id="@+id/nav_changepw"
            android:icon="@drawable/ic_changepw"
            android:title="@string/changepw"/>
        <item android:id="@+id/nav_deleteaccount"
            android:icon="@drawable/ic_delete"
            android:title="@string/deleteaccount"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

</menu>