<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewHRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/pinkRose"
            android:textSize="35dp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/search_layout"
            android:backgroundTint="@color/pinkRoseLight1"
            android:ems="8"
            android:hint="@string/enter_user"
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/pinkRose1"
            android:textColorHint="@color/pinkRoseLight"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/search_layout"
            android:backgroundTint="@color/pinkRoseLight1"
            android:ems="8"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/pinkRose1"
            android:textColorHint="@color/pinkRoseLight"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/search_layout"
            android:backgroundTint="@color/pinkRoseLight1"
            android:ems="8"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/pinkRose1"
            android:textColorHint="@color/pinkRoseLight"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroupStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/student"
                    android:textColor="@color/pinkRose"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/radioTeacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/teacher"
                    android:textColor="@color/pinkRose"
                    android:textSize="16dp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_btn"
            android:backgroundTint="@color/pinkRose"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/register_account"
            android:textColor="@color/white" />


    </LinearLayout>

</RelativeLayout>