<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:src="@drawable/reading"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <TextView
            android:textAlignment="center"
            android:text="@string/app_name"
            android:layout_width="150dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/btnSignin"
            android:text="@string/sign_in"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnSignup"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</RelativeLayout>