<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewHRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35dp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:hint="@string/enter_user"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/pinkLight"
            android:textStyle="italic"
            android:ems="8"/>

        <EditText
            android:id="@+id/editextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/pinkLight"
            android:textStyle="italic"
            android:ems="8"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/buttonSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/sign_in" />


    </LinearLayout>

</RelativeLayout>