<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogSelectMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="SELECT MENU"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnExam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_test"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:text="@string/exam_tests"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/btnVDO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_play"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:text="@string/videos"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/btnFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_file"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:text="@string/document_files"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_remove"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:text="@string/delete_this_subject"
            android:textAlignment="textStart" />

    </LinearLayout>


</RelativeLayout>