<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bottomSelectMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/search_layout"
            android:backgroundTint="@color/grey3"
            android:text="SELECT MENU"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/fragmentMenu1Exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_test" />
            <TextView
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/exam_tests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragmentMenu1Vdo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_play" />
            <TextView
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/videos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragmentMenu1Files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_file" />
            <TextView
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/document_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragmentMenu1Remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_remove" />
            <TextView
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/remove_this_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>